# prompt-agent

./: .gitignore  README.md  pitch-deck-revised.html  pricehunter-pitch-updated.pptx  pyproject.toml
artifacts/: eval_report.json  eval_report.md  fixes.md  issues.json  issues.md  patched.json  summary.json
pricehunter/: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
pricehunter/backend/: .env.example  requirements.txt
pricehunter/backend/app/: __init__.py  config.py  database.py  main.py
pricehunter/backend/app/models/: __init__.py  schemas.py
pricehunter/backend/app/routers/: __init__.py  chat.py  location.py  search.py  webhooks.py
pricehunter/backend/app/services/: __init__.py  browser_use_client.py  chat_session.py  comparator.py  flash_compare.py  flash_price_parser.py  location_resolver.py  offline_pipeline.py  online_discovery.py  online_pipeline.py  orchestrator.py  persistence.py  platform_adapters.py  query_structurer.py  request_context.py  search_progress.py  vendor_discovery.py  voice_agent.py  voice_extractor.py
pricehunter/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
pricehunter/frontend/src/: App.jsx  index.css
pricehunter/frontend/src/components/: ChatBubble.jsx  (+9 more)
prompt_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompt_tool/: __init__.py  analysis.py  cli.py  evaluate.py  fixes.py  ingest.py  llm.py  models.py  scenarios.py
tests/: test_analysis.py  test_evaluate.py  test_fixes.py  test_ingest.py
tests/fixtures/: sample_prompt.json
